--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dependencies": {
         "coffee-script": "^1.10.0",
         "gulp-util": "^3.0.6",
-        "line-ending-corrector": "0.0.3",
+        "line-ending-corrector": "^1.0.0",
         "through2": "^2.0.0"
     },
     "devDependencies": {
