--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Gulp Plugin for Line Ending Corrector (A utility that makes sure your files have consistent line endings)",
     "main": "index-runner.js",
     "scripts": {
-        "test": "mocha --compilers coffee:coffee-script/register"
+        "test": "mocha --compilers coffee:coffeescript/register"
     },
     "repository": {
         "type": "git",
@@ -29,9 +29,9 @@
     },
     "homepage": "https://github.com/iShafayet/gulp-line-ending-corrector",
     "dependencies": {
-        "coffee-script": "^1.10.0",
+        "coffeescript": "^2.0.3",
         "gulp-util": "^3.0.6",
-        "line-ending-corrector": "^1.0.0",
+        "line-ending-corrector": "^1.0.1",
         "through2": "^2.0.0"
     },
     "devDependencies": {
