--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "homepage": "https://github.com/iShafayet/gulp-line-ending-corrector",
     "dependencies": {
         "coffeescript": "^2.0.3",
-        "gulp-util": "^3.0.6",
         "line-ending-corrector": "^1.0.1",
+        "plugin-error": "^1.0.1",
         "through2": "^2.0.0"
     },
     "devDependencies": {
